--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -6,19 +6,22 @@
 </head>
 <body>
 
-	<div class="container">
-		<div class="secondContainer">
+	<section class="container">
+		<header class="secondContainer">
 			<h2>My Profile</h2>
+		</header>
+		<div class="imageContainer">
+			<p>images</p>
 		</div>
-		<p>images</p>
-	</div>
+		
+	</section>
 
-	<div class="container">
+	<section class="container">
 		<h2>Alvarado!</h2>
-	</div>
-	<div class="container">
+	</section>
+	<section class="container">
 		<h2>Conversation</h2>
-	</div>
+	</section>
 
 </body>
 </html>
