--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -4,22 +4,28 @@
 	<title>ChatApp</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="firstStep.css">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+	
 </head>
 <body>
 
 	<section class="container">
-		<header class="secondContainer">
-			<h2>My Profile</h2>
+		<header class="container-header padded">
+			<div class="header">
+				<a href="#"><img src="./left-arrow.png" class="arrow"></a>
+				<button class="menu">Menu</button>
+			</div>
+			<h1>My Profile</h1>
 		</header>
-		<div class="imageContainer">
-			<p>images</p>
+		<div class="padded">
+			images
 		</div>
-		
 	</section>
 
-	<section class="container">
+	<section class="container padded">
+		<div class="header">
+			<div>
+				<span class="muted">Hello,</span>
 		<h2>Alvarado!</h2>
 	</section>
 	<section class="container">
