--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -31,53 +31,52 @@
 	<section class="container">
 		<h2>Conversation</h2>
 		<div class="friendList">
-	   <div class="search">
-		<input type="text" placeholder="Search friend"/> <i class="fas fa-search"></i>
-	</div>
-
-	<ul class="list">
+	   <!-- <div class="search">
+		<input type="text" placeholder="Search friend"/>
+	</div> -->
+		<!-- <dl class="list">
 		<li class="picture">
-			<img src="https://s12emagst.akamaized.net/products/16404/16403318/images/res_64cd87b16d9dc0678d5eeeb91ac22b85_450x450_100_5is4.jpg" alt="avatar"> 
-		<div class="details">
+			<!-- <img src="" alt="avatar">  -->
+		<!-- <div class="details">
 			<div class="name">Beverly Jones</div>
 			<div class="message">You know you're in love when</div>
 		</div>
 
 	 </li>
 	 <li class="picture">
-			<img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="avatar"> 
-		<div class="details">
+			<!-- <img src="">  --> 
+		<!-- <div class="details">
 			<div class="name">Crystal Flores</div>
 			<div class="message">Hey you!What's up</div> 
 		</div>
 
 	 </li>
-	 <li class="picture">
-			<img src="https://s12emagst.akamaized.net/products/16404/16403318/images/res_64cd87b16d9dc0678d5eeeb91ac22b85_450x450_100_5is4.jpg" alt="avatar"> 
-		<div class="details">
+	 <li class="picture"> -->
+			<!-- <img src="" alt="avatar">  -->
+		<!-- <div class="details">
 			<div class="name">Brittany Hart</div>
 			<div class="message">When i'm good, I'am very good</div>
 		</div>
 
 	 </li>
-	 <li class="picture">
-			<img src="https://s12emagst.akamaized.net/products/16404/16403318/images/res_64cd87b16d9dc0678d5eeeb91ac22b85_450x450_100_5is4.jpg" alt="avatar"> 
-		<div class="details">
+	 <li class="picture"> -->
+			<!-- <img src="" alt="avatar">  -->
+		<!-- <div class="details">
 			<div class="name">Deborah Flores</div>
 			<div class="message">Hey you!What's up</div>
 		</div>
 
 	 </li>
-	  <li class="picture">
-			<img src="https://s12emagst.akamaized.net/products/16404/16403318/images/res_64cd87b16d9dc0678d5eeeb91ac22b85_450x450_100_5is4.jpg" alt="Avatar"> 
-		<div class="details">
+	  <li class="picture"> -->
+			<!-- <img src="" alt="Avatar">  -->
+		<!-- <div class="details">
 			<div class="name">Harley Quinn</div>
 			<div class="message">I am a dancer, I know you are</div>
 		</div>
 
 	 </li>
-
-	</ul>
+ -->
+	</dl>
        </div>
 	</section>
 
