--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -12,7 +12,7 @@
 	<section class="container">
 		<header class="container-header padded">
 			<div class="header">
-				<a href="#"><img src="./left-arrow.png" class="arrow"></a>
+				<a href="#"><img src="./left-arrow.svg" class="arrow"></a>
 				<button class="menu">Menu</button>
 			</div>
 			<h1>My Profile</h1>
@@ -26,11 +26,16 @@
 		<div class="header">
 			<div>
 				<span class="muted">Hello,</span>
-		<h2>Alvarado!</h2>
+		<h1>Alvarado!</h1>
+	</div>
+		<img src="https://via.placeholder.com/80" class="circle"/>
 	</section>
-	<section class="container">
-		<h2>Conversation</h2>
-		<div class="friendList">
+	<section class="container padded">
+		<div class="header">
+			<a href="#"><img src="./left-arrow.svg" class="arrow"></a>
+			<button class="menu">Menu</button>
+		<h1>Conversation</h1>
+		
 	   <!-- <div class="search">
 		<input type="text" placeholder="Search friend"/>
 	</div> -->
@@ -75,8 +80,8 @@
 		</div>
 
 	 </li>
- -->
-	</dl>
+ <!-- -->
+	<!-- </dl> -->
        </div>
 	</section>
 
