--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -16,6 +16,10 @@
 				<button class="menu">Menu</button>
 			</div>
 			<h1>My Profile</h1>
+			<div class="center">
+			<img src="https://via.placeholder.com/80/1.jpg" class="circle"/>
+			<h3>Anna Alvarado</h3>
+			</div>
 		</header>
 		<div class="padded">
 			images
