--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -19,6 +19,8 @@
 			<div class="center">
 			<img src="https://via.placeholder.com/80/1.jpg" class="circle"/>
 			<h3>Anna Alvarado</h3>
+			<p class="muted">Guildhall School of Music & Drama</p>
+			<p class="muted">London, UK</p>
 			</div>
 		</header>
 		<div class="padded">
