--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -1,96 +1,112 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>ChatApp</title>
-	<meta charset="UTF-8" />
-	<link rel="stylesheet" type="text/css" href="firstStep.css">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-	
+    <title>ChatApp</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="firstStep.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
-	<section class="container">
-		<header class="container-header padded">
-			<div class="header">
-				<a href="#"><img src="./left-arrow.svg" class="arrow"></a>
-				<button class="menu">Menu</button>
-			</div>
-			<h1>My Profile</h1>
-			<div class="center">
-			<img src="https://via.placeholder.com/80/1.jpg" class="circle"/>
-			<h3>Anna Alvarado</h3>
-			<p class="muted">Guildhall School of Music & Drama</p>
-			<p class="muted">London, UK</p>
-			</div>
-		</header>
-		<div class="padded">
-			images
-		</div>
-	</section>
+    <section class="container">
+        <header class="container-header padded">
+            <div class="header">
+                <a href="#"><img src="./left-arrow.svg" class="arrow"></a>
+                <button class="menu">Menu</button>
+            </div>
+            <h1>My Profile</h1>
+            <div class="center">
+                <img src="https://via.placeholder.com/80/1.jpg" class="circle" />
+                <h3>Anna Alvarado</h3>
+                <p class="muted">Guildhall School of Music & Drama</p>
+                <p class="muted">London, UK</p>
+            </div>
+            <dl>
+                <div>
+                    <dt>Photos</dt>
+                    <dd>456</dd>
+                </div>
+                <div>
+                    <dt>Followers</dt>
+                    <dd>602</dd>
+                </div>
+                <div>
+                    <dt>Follows</dt>
+                    <dd>290</dd>
+                </div>
+            </dl>
+        </header>
+        <div class="padded">
+            images
+        </div>
+    </section>
 
-	<section class="container padded">
-		<div class="header">
-			<div>
-				<span class="muted">Hello,</span>
-		<h1>Alvarado!</h1>
-	</div>
-		<img src="https://via.placeholder.com/80" class="circle"/>
-	</section>
-	<section class="container padded">
-		<div class="header">
-			<a href="#"><img src="./left-arrow.svg" class="arrow"></a>
-			<button class="menu">Menu</button>
-		</div>
-		<h1>Conversation</h1>
-		
-	   <!-- <div class="search">
-		<input type="text" placeholder="Search friend"/>
-	</div> -->
-		<!-- <dl class="list">
-		<li class="picture">
-			<!-- <img src="" alt="avatar">  -->
-		<!-- <div class="details">
-			<div class="name">Beverly Jones</div>
-			<div class="message">You know you're in love when</div>
-		</div>
+    <section class="container padded">
+        <div class="header">
+            <div>
+                <span class="muted">Hello,</span>
+                <h1>Alvarado!</h1>
+            </div>
+            <img src="https://via.placeholder.com/80" class="circle" />
+    </section>
+    <section class="container padded">
+        <div class="header">
+            <a href="#"><img src="./left-arrow.svg" class="arrow"></a>
+            <button class="menu">Menu</button>
+        </div>
+        <h1>Conversation</h1>
 
-	 </li>
-	 <li class="picture">
-			<!-- <img src="">  --> 
-		<!-- <div class="details">
-			<div class="name">Crystal Flores</div>
-			<div class="message">Hey you!What's up</div> 
-		</div>
+        <div class="search">
+            <input type="text" placeholder="Search friend" />
+        </div>
+        <dl class="list">
+            <dt class="picture">
+                <img src="" >
+                <div class="details">
+                    <div class="name">Beverly Jones</div>
+                    <div class="message">You know you're in love when</div>
+                </div>
 
-	 </li>
-	 <li class="picture"> -->
-			<!-- <img src="" alt="avatar">  -->
-		<!-- <div class="details">
-			<div class="name">Brittany Hart</div>
-			<div class="message">When i'm good, I'am very good</div>
-		</div>
+            </dt>
+            <dt class="picture">
+                <img src="">
+                <div class="details">
+                    <div class="name">Crystal Flores</div>
+                    <div class="message">Hey you!What's up</div>
+                </div>
 
-	 </li>
-	 <li class="picture"> -->
-			<!-- <img src="" alt="avatar">  -->
-		<!-- <div class="details">
-			<div class="name">Deborah Flores</div>
-			<div class="message">Hey you!What's up</div>
-		</div>
+            </dt>
+            <dt class="picture">
+                <img src="" >
+                <div class="details">
+                    <div class="name">Brittany Hart</div>
+                    <div class="message">When i'm good, I'am very good</div>
+                </div>
 
-	 </li>
-	  <li class="picture"> -->
-			<!-- <img src="" alt="Avatar">  -->
-		<!-- <div class="details">
+            </dt>
+            <dt class="picture">
+                <img src="" >
+                <div class="details">
+                    <div class="name">Deborah Flores</div>
+                    <div class="message">Hey you!What's up</div>
+                </div>
+
+            </dt>
+            <dt class="picture">
+                <img src="">
+                 <div class="details">
 			<div class="name">Harley Quinn</div>
 			<div class="message">I am a dancer, I know you are</div>
 		</div>
 
-	 </li>
- <!-- -->
-	<!-- </dl> -->
-       
-	</section>
+    </dt>
+        </dl>
+
+    </section>
 
 </body>
+
 </html>
