--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -61,6 +61,9 @@
 
         <div class="search">
             <input type="text" placeholder="Search friend" />
+            <div class="loupe">
+                <img src="search.svg">
+            </div>
         </div>
         <dl class="list">
             <dt class="picture">
