--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -53,18 +53,19 @@
             <img src="https://via.placeholder.com/80" class="circle" />
     </section>
     <section class="container padded">
-        <div class="header">
+        <header class="header">
             <a href="#"><img src="./left-arrow.svg" class="arrow"></a>
             <button class="menu">Menu</button>
-        </div>
+        </header>
         <h1>Conversation</h1>
 
-        <div class="search">
+        <br />
+
+        <form action ="#" method="GET" class="search">
             <input type="text" placeholder="Search friend" />
-            <div class="loupe">
-                <img src="search.svg">
-            </div>
-        </div>
+            <button type="submit">Search</button>
+            <div  class="lupa"><img src="search.svg"></div>
+        </form>
         <dl class="list">
             <dt class="picture">
                 <img src="" >
