--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -40,17 +40,31 @@
             </dl>
         </header>
         <div class="padded">
-            images
+            <div class="row">
+            <div class="column">
+            <img src="women.jpg" style="width: 100%">
+        </div>
+        <div class="column">
+            <img src="won.jpg" style="width: 50%">
+            <img src="won.jpg" style="width: 50%">
+        </div>
         </div>
     </section>
 
     <section class="container padded">
-        <div class="header">
+        <header class="header">
             <div>
                 <span class="muted">Hello,</span>
                 <h1>Alvarado!</h1>
             </div>
             <img src="https://via.placeholder.com/80" class="circle" />
+        </header>
+         <br />
+
+        <form action ="#" method="GET" class="search">
+            <input type="text" placeholder="Search friend" />
+            <button type="submit">Search</button>
+        </form>
     </section>
     <section class="container padded">
         <header class="header">
@@ -64,7 +78,6 @@
         <form action ="#" method="GET" class="search">
             <input type="text" placeholder="Search friend" />
             <button type="submit">Search</button>
-            <div  class="lupa"><img src="search.svg"></div>
         </form>
         <dl class="list">
             <dt class="picture">
