--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -65,6 +65,12 @@
             <input type="text" placeholder="Search friend" />
             <button type="submit">Search</button>
         </form>
+
+        <div class="card">
+            <img src="women.jpg" style="width:auto">
+            <p>Shane Robertson</p>
+            <span class="muted">32m ago</span>
+        </div>
     </section>
     <section class="container padded">
         <header class="header">
