--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -49,6 +49,7 @@
             <img src="won.jpg" style="width: 50%">
         </div>
         </div>
+        </div>
     </section>
 
     <section class="container padded">
@@ -67,7 +68,7 @@
         </form>
 
         <div class="card">
-            <img src="women.jpg" style="width:auto">
+            <img src="women.jpg" style="width:100%">
             <p>Shane Robertson</p>
             <span class="muted">32m ago</span>
         </div>
