--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ChatApp</title>
+    <title>FirstBox</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="firstStep.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -42,11 +42,11 @@
         <div class="padded">
             <div class="row">
             <div class="column">
-            <img src="women.jpg" style="width: 100%">
+            <img src="women.jpg" style="width: 150%">
         </div>
         <div class="column">
-            <img src="won.jpg" style="width: 50%">
-            <img src="won.jpg" style="width: 50%">
+            <img src="won.jpg" style="width: 100%">
+            <img src="won.jpg" style="width: 100%">
         </div>
         </div>
         </div>
