--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -39,16 +39,11 @@
                 </div>
             </dl>
         </header>
-        <div class="padded">
-            <div class="row">
-            <div class="column">
-            <img src="women.jpg" style="width: 150%">
-        </div>
-        <div class="column">
-            <img src="won.jpg" style="width: 100%">
-            <img src="won.jpg" style="width: 100%">
-        </div>
-        </div>
+        
+        <div class="wrapper">
+        <div class="item1">Item</div>
+        <div class="item2">Item</div>
+        <div class="item3">Item</div>
         </div>
     </section>
 
