--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -29,7 +29,7 @@
                     <strong>Guildhall School of Music & Drama</strong><br>London, UK</p>
             </div>
 
-            <dl class ="stats">
+            <div class ="stats">
                 <dt>Photos</dt>
                 <dd>456</dd>
         
@@ -82,49 +82,50 @@
             <input type="text" placeholder="Search friend" />
             <button type="submit">Search</button>
         </form>
-        <dl class="list">
-            <dt class="picture">
-                <img src="" >
-                <div class="details">
-                    <div class="name">Beverly Jones</div>
-                    <div class="message">You know you're in love when</div>
+
+    <dl>
+        <dt class="list">
+            <img src="https://picsum.photos/id/1005/80" class="circle" />
+            <div class="text">
+                <h4>Beverly Jones</h4>
+                <p class="muted"><span>You know you're in love when</span></p>
+            </div>
+        <dt>
+        <dt class="list">   
+                <img src="https://picsum.photos/id/1012/80" class="circle" />
+                <div class="text">
+                    <h4>Crystal Flores</h4>
+                    <p class="muted">Hey you!What's up</p>
                 </div>
-
-            </dt>
-            <dt class="picture">
-                <img src="">
-                <div class="details">
-                    <div class="name">Crystal Flores</div>
-                    <div class="message">Hey you!What's up</div>
+        </dt>
+           
+         <dt class="list">
+                <img src="https://picsum.photos/id/1027/80" class="circle" />
+                <div class="text">
+                    <h4>Brittany Hart</h4>
+                    <p class="muted">When i'm good, I'am very good</p>
                 </div>
+         </dt>
 
-            </dt>
-            <dt class="picture">
-                <img src="" >
-                <div class="details">
-                    <div class="name">Brittany Hart</div>
-                    <div class="message">When i'm good, I'am very good</div>
+         <dt class="list">
+                <img src="https://picsum.photos/id/1006/80" class="circle" />
+                <div class="text">
+                    <h4>Deborah Flores</h4>
+                    <p class="muted">Hey you!What's up</p>
                 </div>
-
-            </dt>
-            <dt class="picture">
-                <img src="" >
-                <div class="details">
-                    <div class="name">Deborah Flores</div>
-                    <div class="message">Hey you!What's up</div>
+         </dt>
+        <dt class="list">
+                <img src="https://picsum.photos/id/1011/80" class="circle" />
+                 <div class="text">
+                    <h4>Harley Quinn</h4>
+                    <p class="muted">I am a dancer, I know you are</p>
                 </div>
+        </dt>
+    </dl>
 
-            </dt>
-            <dt class="picture">
-                <img src="">
-                 <div class="details">
-			<div class="name">Harley Quinn</div>
-			<div class="message">I am a dancer, I know you are</div>
-		</div>
-
-    </dt>
-        </dl>
-
+     <form>
+         <button></button>
+     </form>
     </section>
 
 </body>
