--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -122,12 +122,10 @@
                 </div>
         </dt>
     </dl>
-
-     <form>
-         <button></button>
-     </form>
+        <div class="new">
+         <button type="submit"></button>
+     </div>
     </section>
 
 </body>
 
-</html>
