--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -85,45 +85,46 @@
 
     <dl>
         <dt class="list">
-            <img src="https://picsum.photos/id/1005/80" class="circle" />
+            <img src="https://picsum.photos/id/1005/60" class="circle" />
             <div class="text">
                 <h4>Beverly Jones</h4>
-                <p class="muted"><span>You know you're in love when</span></p>
+                <span class="muted">You know you're in love when</span>
             </div>
         <dt>
         <dt class="list">   
-                <img src="https://picsum.photos/id/1012/80" class="circle" />
+                <img src="https://picsum.photos/id/1012/60" class="circle" />
                 <div class="text">
                     <h4>Crystal Flores</h4>
-                    <p class="muted">Hey you!What's up</p>
+                    <span class="muted">Hey you!What's up</span> 
                 </div>
         </dt>
            
          <dt class="list">
-                <img src="https://picsum.photos/id/1027/80" class="circle" />
+                <img src="https://picsum.photos/id/1027/60" class="circle" />
                 <div class="text">
                     <h4>Brittany Hart</h4>
-                    <p class="muted">When i'm good, I'am very good</p>
+                    <span class="muted">When i'm good, I'am very good</span>
                 </div>
          </dt>
 
          <dt class="list">
-                <img src="https://picsum.photos/id/1006/80" class="circle" />
+                <img src="https://picsum.photos/id/1006/60" class="circle" />
                 <div class="text">
                     <h4>Deborah Flores</h4>
-                    <p class="muted">Hey you!What's up</p>
+                    <span class="muted">Hey you!What's up</span>
                 </div>
          </dt>
         <dt class="list">
-                <img src="https://picsum.photos/id/1011/80" class="circle" />
+                <img src="https://picsum.photos/id/1011/60" class="circle" />
                  <div class="text">
                     <h4>Harley Quinn</h4>
-                    <p class="muted">I am a dancer, I know you are</p>
+                    <span class="muted">I am a dancer, I know you are</span>
                 </div>
         </dt>
     </dl>
         <div class="new">
-         <button type="submit"></button>
+          <a href="#" class="crayon"></a> 
+         <button type="submit"> </button>
      </div>
     </section>
 
