--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -62,6 +62,9 @@
             <input type="text" placeholder="Search friend" />
             <button type="submit">Search</button>
         </form>
+        <div>
+            
+        </div>
 
         <div class="card">
             <img src="https://picsum.photos/id/777/3000/2000" style="width:100%">
