--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>FirstBox</title>
     <meta charset="UTF-8" />
@@ -62,20 +61,35 @@
             <input type="text" placeholder="Search friend" />
             <button type="submit">Search</button>
         </form>
-        <div>
-            
+        <br/>
+        <div class="wrapper2">
+            <div class="itemA">
+            <button type="submit"> </button></div>
+            <div class="itemB"></div>
+            <div class="itemC"></div>
+            <div class="itemD"></div>
         </div>
 
+       <br />
+
         <div class="card">
-            <img src="https://picsum.photos/id/777/3000/2000" style="width:100%">
-            <p>Shane Robertson</p>
-            <span class="muted">32m ago</span>
-        </div>
+            <img class="square" src="https://picsum.photos/id/777/3000/2000" style="width:100%">
+            <div class="header">   
+                <div class="list">
+                    <img src="https://picsum.photos/id/1012/40" class="circle" />
+                <div class="text">
+                    <h4>Shane Robertson</h4>
+                    <span class="muted">32m ago</span>
+                </div>
+                    <button type="submit" class="menu" id="dot">Menu</button>
+                </div>
+            </div>
+
     </section>
     <section class="container padded">
         <header class="header">
             <a href="#"><img src="./left-arrow.svg" class="arrow"></a>
-            <button class="menu">Menu</button>
+            <button type="submit" class="menu">Menu</button>
         </header>
         <h1>Conversation</h1>
 
@@ -126,7 +140,7 @@
         </dt>
     </dl>
         <div class="new">
-          <a href="#" class="crayon"></a> 
+          <!-- <a href="#" class="crayon"></a>  -->
          <button type="submit"> </button>
      </div>
     </section>
