--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -61,13 +61,16 @@
             <input type="text" placeholder="Search friend" />
             <button type="submit">Search</button>
         </form>
+        
         <br/>
+
         <div class="wrapper2">
-            <div class="itemA">
-            <button type="submit"> </button></div>
-            <div class="itemB"></div>
-            <div class="itemC"></div>
-            <div class="itemD"></div>
+            <div class="slide one">
+                <button type="submit"> </button>
+            </div>
+            <div class="slide two"></div>
+            <div class="slide three"></div>
+            <div class="slide four"></div>
         </div>
 
        <br />
