--- a/firstStep/firstStep.html
+++ b/firstStep/firstStep.html
@@ -65,13 +65,21 @@
         <br/>
 
         <div class="wrapper2">
-            <div class="slide one">
+            <div class="inner inline">
+            <div class="slide inline-slide one">
                 <button type="submit"> </button>
             </div>
-            <div class="slide two"></div>
-            <div class="slide three"></div>
-            <div class="slide four"></div>
+            <div class="slide inline-slide two"></div>
+            <div class="slide inline-slide three"></div>
+            <div class="slide inline-slide four"></div>
+            <div class="slide inline-slide five"></div>
+             <div class="slide inline-slide six"></div>
+            <div class="slide inline-slide seven"></div>
+            <div class="slide inline-slide eight"></div>
+            <div class="slide inline-slide nine"></div>
+            <div class="slide inline-slide ten"></div>
         </div>
+    </div>
 
        <br />
 
